[gd_scene load_steps=8 format=2]

[ext_resource path="res://physics_jigglebone/PhysicsJiggleBone.tscn" type="PackedScene" id=1]
[ext_resource path="res://mesh/penis_type_a/Penis.glb" type="PackedScene" id=2]
[ext_resource path="res://characters/Penis.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.531743
height = 0.247939

[sub_resource type="CapsuleShape" id=2]
radius = 0.535488
height = 0.451728

[sub_resource type="CapsuleShape" id=3]
radius = 0.448198
height = 0.308286

[sub_resource type="CapsuleShape" id=4]
radius = 0.64
height = 0.08

[node name="PenisTypeA" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Genitals" parent="." index="0"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="Bone1" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 2.26215e-10, 2.38482e-07, 6.01655e-08, -0.967892, -0.251367, 2.30768e-07, 0.251367, -0.967892, -2.3942e-07, 0.540278, 1.12045 )
collision_layer = 2
collision_mask = 4
contacts_reported = 1
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Gen_1"
stiffness = 2.0
damping = 5.0
gravity_shape_offset = Vector3( 0, -1, -0.1 )

[node name="CollisionShape" type="CollisionShape" parent="Bone1" index="0"]
transform = Transform( 1, 3.86772e-08, 3.15019e-09, -3.8675e-08, 0.986713, 0.162466, 3.17593e-09, -0.162464, 0.986713, -1.90839e-07, 0.178715, 0.799173 )
shape = SubResource( 1 )

[node name="Bone2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( 1, 1.06105e-10, 2.38467e-07, 9.45747e-08, -0.91817, -0.396186, 2.18911e-07, 0.396186, -0.91817, -2.3942e-07, 0.874085, 1.8776 )
collision_layer = 2
collision_mask = 4
contacts_reported = 1
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Gen_2"
stiffness = 2.0
damping = 5.0
gravity_shape_offset = Vector3( 0, -0.6, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bone2" index="0"]
transform = Transform( 1, -1.82304e-08, 7.02272e-10, 1.82304e-08, 0.997049, -0.0767718, 6.99259e-10, 0.076771, 0.99705, -1.88568e-07, 0.0431952, 0.789043 )
shape = SubResource( 2 )

[node name="Bone3" parent="." index="3" instance=ExtResource( 1 )]
transform = Transform( 1, -2.39268e-10, 4.76702e-07, 2.40603e-07, -0.863027, -0.505157, 4.11528e-07, 0.505157, -0.863027, -4.77836e-07, 1.27867, 2.67558 )
collision_layer = 2
collision_mask = 4
contacts_reported = 1
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Gen_3"
stiffness = 2.0
damping = 5.0
gravity_shape_offset = Vector3( 0, -0.35, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bone3" index="0"]
transform = Transform( 1, -7.02542e-08, 5.16059e-09, 7.02504e-08, 0.989175, -0.146739, 5.20487e-09, 0.146738, 0.989176, -4.21916e-07, 0.0486959, 0.882935 )
shape = SubResource( 2 )

[node name="Bone4" parent="." index="4" instance=ExtResource( 1 )]
transform = Transform( 1, 1.88116e-10, 2.38685e-07, 1.43205e-07, -0.800492, -0.599344, 1.90952e-07, 0.599344, -0.800492, -2.39425e-07, 1.7173, 3.32475 )
collision_layer = 2
collision_mask = 4
contacts_reported = 1
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Gen_4"
stiffness = 2.0
damping = 5.0
gravity_shape_offset = Vector3( 0, -0.26, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Bone4" index="0"]
transform = Transform( 1, -3.58839e-08, 2.58177e-09, 3.58742e-08, 0.98917, -0.146775, 2.71294e-09, 0.146773, 0.989172, -1.68508e-07, 0.0660453, 0.704605 )
shape = SubResource( 2 )

[node name="Bone5" parent="." index="5" instance=ExtResource( 1 )]
transform = Transform( 1, -8.83318e-10, 7.14682e-07, 5.49038e-07, -0.639227, -0.769018, 4.57523e-07, 0.769018, -0.639227, -7.1625e-07, 2.33534, 3.97763 )
collision_layer = 2
collision_mask = 4
contacts_reported = 1
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Gen_5"
stiffness = 2.0
damping = 5.0
gravity_shape_offset = Vector3( 0, -0.26, -0.061 )

[node name="CollisionShape" type="CollisionShape" parent="Bone5" index="0"]
transform = Transform( 1, -1.79409e-07, 2.17561e-08, 1.79292e-07, 0.969736, -0.244158, 2.27063e-08, 0.244156, 0.969737, -4.61786e-07, 0.152184, 0.643565 )
shape = SubResource( 3 )

[node name="Balls" parent="." index="6" instance=ExtResource( 1 )]
transform = Transform( 1, 1.29333e-07, 2.23232e-06, -1.11404e-06, 0.894419, 0.447229, -1.93879e-06, -0.447229, 0.894419, -2.23332e-06, -1.47487, -1.25761 )
collision_layer = 2
collision_mask = 4
contact_monitor = true
skeleton_path = NodePath("../Genitals/Skeleton")
bone_name = "Ball"

[node name="CollisionShape" type="CollisionShape" parent="Balls" index="0"]
transform = Transform( -0.0794679, -0.010465, -0.996782, -0.446693, 0.894304, 0.0262232, 0.891153, 0.447339, -0.0757431, -0.0239084, -0.151004, 0.978725 )
shape = SubResource( 4 )

[node name="UpdateTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
